syntax = "proto3";

package agent_auth;
option go_package = "pkg/pb";
option swift_prefix = "";

import "agent.proto";

service AgentAuth {
  rpc WhoAmI(WhoAmIRequest) returns (WhoAmIResponse);
  rpc GetCurrentToken(CurrentTokenRequest) returns (CurrentTokenResponse);
  rpc CachedTokenExchange(TokenExchangeRequest) returns (TokenExchangeResponse);
  rpc DeviceTokenExchange(DeviceTokenExchangeRequest) returns (TokenExchangeResponse);
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
}

message WhoAmIRequest {
  agent.RequestHeader header = 1;
}

message WhoAmIResponse {
  agent.ResponseHeader header = 1;
  string body = 2;
}

message CurrentTokenRequest {
  agent.RequestHeader header = 1;
  enum Type {
    UNSPECIFIED = 0;
    VERIFIED = 1;
    UNVERIFIED = 2;
  }
  Type type = 2;
}

message CurrentTokenResponse {
  agent.ResponseHeader header = 1;
  agent.Token token = 2;
  string raw = 3;
  string url = 4;
}

message TokenExchangeRequest {
  agent.RequestHeader header = 1;
  string client_id = 2;
}

message TokenExchangeResponse {
  agent.ResponseHeader header = 1;
  string access_token = 2;
  uint64 expires_in = 3;
}

message DeviceTokenExchangeRequest {
  agent.RequestHeader header = 1;
  string device_name = 2;
}

message AuthorizeRequest {
  agent.RequestHeader header = 1;
  string service = 2;
  string uid = 3;
}

message AuthorizeResponse {
  agent.ResponseHeader header = 1;
}
